--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://laiproject-instance.mysql.database.azure.com:3306/ecommerce?serverTimezone=UTC
 spring.datasource.username=chao@laiproject-instance
 spring.datasource.password=Haibara@0426
+
+server.port=8080
+server.servlet.context-path=/onlineShop
+
+
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
