--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
             <version>5.3.3.RELEASE</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.thymeleaf</groupId>-->
+<!--            <artifactId>thymeleaf-spring5</artifactId>-->
+<!--            <version>3.0.11.RELEASE</version>-->
+<!--        </dependency>-->
 
     </dependencies>
 
